--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "scripts": {
     "login": "npx playwright open --save-storage=auth.json https://www.epicgames.com/login",
     "codegen": "npx playwright codegen --load-storage=auth.json https://www.epicgames.com/store/en-US/free-games",
-    "start": "npx playwright test --timeout 10000",
+    "test": "npx playwright test --timeout 10000",
     "debug": "npx playwright test --debug",
-    "stealth": "node main.stealth"
+    "start": "node main.stealth"
   },
   "devDependencies": {
     "@playwright/test": "^1.17.1",
