upgrade to ES6 modules and top-level await, add jsconfig.json with es2022
https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/import
https://code.visualstudio.com/docs/languages/jsconfig

--- a/package.json
+++ b/package.json
@@ -10,5 +10,6 @@
     "@playwright/test": "^1.17.1",
     "playwright": "^1.17.1",
     "puppeteer-extra-plugin-stealth": "^2.9.0"
-  }
+  },
+  "type": "module"
 }
