--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "login": "npx playwright open --save-storage=auth.json https://www.epicgames.com/login",
     "codegen": "npx playwright codegen --load-storage=auth.json https://www.epicgames.com/store/en-US/free-games",
     "docker:build": "docker build --tag free-games-claimer .",
-    "docker:epic-games": "rimraf data/browser/SingletonLock && cross-env-shell docker run --rm -it -p 5900:5900 -p 6080:6080 -v \\\"$INIT_CWD/data\\\":/fgc/data --name free-games-claimer free-games-claimer"
+    "docker:epic-games": "cross-env-shell docker run --rm -it -p 5900:5900 -p 6080:6080 -v \\\"$INIT_CWD/data\\\":/fgc/data --name free-games-claimer free-games-claimer"
   },
   "devDependencies": {
     "@playwright/test": "^1.20.1",
