--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "@playwright/test": "^1.20.1",
     "cross-env": "^7.0.3",
     "playwright": "^1.20.1",
-    "puppeteer-extra-plugin-stealth": "^2.9.0",
-    "rimraf": "^3.0.2"
+    "puppeteer-extra-plugin-stealth": "^2.9.0"
   },
   "type": "module"
 }
