--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@playwright/test": "^1.20.1",
     "cross-env": "^7.0.3",
+    "lowdb": "^3.0.0",
     "playwright": "^1.20.1",
     "puppeteer-extra-plugin-stealth": "^2.9.0"
   },
