--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cross-env": "^7.0.3",
     "lowdb": "^4.0.0",
     "playwright": "^1.27.1",
+    "prompts": "^2.4.2",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
   },
   "type": "module"
