--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,9 +14,9 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      # -
-      #   name: Checkout
-      #   uses: actions/checkout@v3
+      -
+        name: Checkout
+        uses: actions/checkout@v3
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
