--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,11 @@
+# docker compose up
 services:
   free-games-claimer:
     container_name: fgc # is printed in front of every output line
     image: ghcr.io/vogler/free-games-claimer # otherwise image name will be free-games-claimer-free-games-claimer
     build: .
     ports:
-      - '5900:5900'
-      - '6080:6080'
+      - "5900:5900"
+      - "6080:6080"
     volumes:
       - ./data:/fgc/data
