--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
     "lowdb": "^5.0.5",
+    "otplib": "^12.0.1",
     "playwright": "^1.29.0",
     "prompts": "^2.4.2",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
