--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.3",
+    "enquirer": "^2.3.6",
     "lowdb": "^5.1.0",
     "otplib": "^12.0.1",
     "playwright": "^1.30.0",
-    "prompts": "^2.4.2",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
   },
   "repository": {
