--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "enquirer": "^2.3.6",
     "lowdb": "^5.1.0",
     "otplib": "^12.0.1",
-    "playwright": "^1.31.0",
+    "playwright-firefox": "^1.31.0",
     "puppeteer-extra-plugin-stealth": "^2.11.1"
   },
   "repository": {
