sample `command:` and `environment:` in docker-compose.yml, #85

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,7 @@ services:
       - "6080:6080" # noVNC (browser-based VNC client)
     volumes:
       - fgc:/fgc/data
+    # command: bash -c "node epic-games; node gog"
+    environment:
+      # - EMAIL=foo@bar.org
+      # - NOTIFY='tgram://...'
