--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,20 @@
 # start with `docker compose up`
+version: "3.7"
+
+secrets:
+  vnc_password:
+    file: .secrets/vnc_password_common
+  epic_user:
+    file: .secrets/epic_user
+  epic_password:
+    file: .secrets/epic_password
+  epic_otp:
+    file: .secrets/epic_otp
+
 services:
   free-games-claimer:
     container_name: fgc # is printed in front of every output line
     image: ghcr.io/vogler/free-games-claimer # otherwise image name will be free-games-claimer-free-games-claimer
-    build: .
     ports:
       # - "5900:5900" # VNC server
       - "6080:6080" # noVNC (browser-based VNC client)
@@ -13,3 +24,30 @@ services:
     environment:
       # - EMAIL=foo@bar.org
       # - NOTIFY='tgram://...'
+      # - NOTIFY_TITLE="Optional title for notifications"
+      # - VNC_PASSWORD="VNC Password"
+      - VNC_PASSWORD_FILE=/run/secrets/vnc_password
+      # - BROWSER_DIR="data/browser"
+      # - TIMEOUT="60"
+      # - LOGIN_TIMEOUT="80"
+      # - EMAIL="Default email for any login"
+      # - PASSWORD="Default password for any login"
+      # - EG_EMAIL="Epic Games email for login"
+      # - EG_PASSWORD="Epic Games password for login"
+      # - EG_OTPKEY="Epic Games MFA OTP key"
+      - EG_EMAIL_FILE=/run/secrets/epic_user
+      - EG_PASSWORD_FILE=/run/secrets/epic_password
+      - EG_OTPKEY_FILE=/run/secrets/epic_otp
+      # - EG_PARENTALPIN="Epic Games Parental Controls PIN"
+      # - PG_EMAIL="Prime Gaming email for login"
+      # - PG_PASSWORD="Prime Gaming password for login"
+      # - PG_OTPKEY="Prime Gaming MFA OTP key"
+      # - PG_REDEEM="0"
+      # - PG_CLAIMDLC="0"
+      # - GOG_EMAIL="GOG email for login"
+      # - GOG_PASSWORD="GOG Password"
+    secrets:
+      - epic_user
+      - epic_password
+      - epic_otp
+      - vnc_password
