same as before, just ignore .github/** and then include docker.yml

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,10 +4,11 @@ on:
   workflow_dispatch: # allow manual trigger
   # https://github.com/orgs/community/discussions/26276
   push: # on every branch, but not for PRs from forks?
-    paths-ignore:
-      - "README.md"
-      - ".github/dependabot.yml"
-      - ".github/ISSUE_TEMPLATE/**"
+    paths:
+      - '**'
+      - '!README.md'
+      - '!.github/**'
+      - '.github/workflows/docker.yml'
   pull_request: # includes PRs from forks but only triggers on creation, not pushes?
     branches:
       - "main" # only PRs against main
