--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -59,3 +59,5 @@ jobs:
           tags: |
             voglerr/free-games-claimer:latest
             ghcr.io/vogler/free-games-claimer:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
