npm package*.json license MIT -> AGPL-3.0-only

--- a/package.json
+++ b/package.json
@@ -23,5 +23,5 @@
     "url": "https://github.com/vogler/free-games-claimer.git"
   },
   "author": "Ralf Vogler",
-  "license": "MIT"
+  "license": "AGPL-3.0-only"
 }
