fix vscode problem in jsconfig with module vs. moduleResolution
Option 'module' must be set to 'NodeNext' when option 'moduleResolution' is set to 'NodeNext'.ts
Specify what module code is generated.

See more: https://www.typescriptlang.org/tsconfig#module

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "checkJs": true,
     "target": "es2021",
-    "module": "esnext",
+    "module": "NodeNext",
     "moduleResolution": "NodeNext", // https://github.com/typicode/lowdb/issues/554
   },
   "exclude": ["node_modules", "**/node_modules"]
