eslint: enable most stylistic rules
https://eslint.style/packages/js

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "Ralf Vogler",
   "license": "AGPL-3.0-only",
   "devDependencies": {
+    "@stylistic/eslint-plugin-js": "^1.0.1",
     "eslint": "^8.53.0"
   }
 }
