--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -10,8 +10,13 @@ jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v3
+    -
+      uses: actions/checkout@v4
+      with:
+        # Disabling shallow clone is recommended for improving relevancy of reporting. Otherwise sonarcloud will show a warning.
+        fetch-depth: 0
+    -
+      uses: actions/setup-node@v3
       with:
         cache: 'npm'
     -
