--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "type": "module",
   "dependencies": {
+    "chalk": "^5.3.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "enquirer": "^2.4.1",
