--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "enquirer": "^2.4.1",
     "lowdb": "^7.0.1",
     "otplib": "^12.0.1",
+    "package.json": "^2.0.1",
     "playwright-firefox": "^1.45.0",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
   },
