--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,6 +34,9 @@ jobs:
           else
             echo "IMAGE_TAG=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
           fi
+          # TODO the above didn't tag main as latest... probably not available in env.BRANCH right away
+          echo "${{ env.BRANCH }}"
+          echo "IMAGE_TAG=latest" >> $GITHUB_ENV
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
