--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,16 +27,14 @@ jobs:
       -
         name: Set environment variables
         run: |
-          echo "BRANCH=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+          BRANCH="${GITHUB_REF#refs/heads/}"
+          echo "BRANCH=$BRANCH" >> $GITHUB_ENV
           echo "NOW=$(date -R)" >> $GITHUB_ENV # date -Iseconds; date +'%Y-%m-%dT%H:%M:%S'
-          if [[ "${{ env.BRANCH }}" == "main" ]]; then
+          if [[ "$BRANCH" == "main" ]]; then
             echo "IMAGE_TAG=latest" >> $GITHUB_ENV
           else
-            echo "IMAGE_TAG=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+            echo "IMAGE_TAG=$BRANCH" >> $GITHUB_ENV
           fi
-          # TODO the above didn't tag main as latest... probably not available in env.BRANCH right away
-          echo "${{ env.BRANCH }}"
-          echo "IMAGE_TAG=latest" >> $GITHUB_ENV
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v3
