fix CodeQL alerts 5-7
https://github.com/vogler/free-games-claimer/security/code-scanning/5
https://github.com/vogler/free-games-claimer/security/code-scanning/6
https://github.com/vogler/free-games-claimer/security/code-scanning/7

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,6 +17,9 @@ on:
     branches:
       - "main" # only PRs against main
 
+permissions:
+  contents: read
+
 jobs:
   docker:
     runs-on: ubuntu-latest
