run for PRs against main or dev

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -13,7 +13,7 @@ on:
   pull_request:
     branches:
       - main
-      - master
+      - dev
 
 # Comment env block if you do not want to apply fixes
 env:
