--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -5,8 +5,8 @@ on:
   push: # push on branch
     branches: [main, dev]
     paths: # ignore changes to .md files
-      - '**'
-      - '!*.md'
+      - "**"
+      - "!*.md"
       # - '!.github/**'
   pull_request: # runs when opened/reopned or when the head branch is updated
 
@@ -15,17 +15,15 @@ permissions:
   packages: write
 
 env:
- BRANCH: ${{ github.head_ref || github.ref_name }} # head_ref/base_ref are only set for PRs, for branches ref_name will be used
+  BRANCH: ${{ github.head_ref || github.ref_name }} # head_ref/base_ref are only set for PRs, for branches ref_name will be used
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Checkout
+      - name: Checkout
         uses: actions/checkout@v4
-      -
-        name: Set environment variables
+      - name: Set environment variables
         run: |
           echo "NOW=$(date -R)" >> "$GITHUB_ENV" # date -Iseconds; date +'%Y-%m-%dT%H:%M:%S'
           if [[ "$BRANCH" == "main" ]]; then
@@ -33,8 +31,7 @@ jobs:
           else
             echo "IMAGE_TAG=$BRANCH" >> "$GITHUB_ENV"
           fi
-      -
-        name: Extract metadata for Docker (tags, labels)
+      - name: Extract metadata for Docker (tags, labels)
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -52,29 +49,24 @@ jobs:
           # otherwise labels are not shown on GitHub due to multi-arch image: https://docs.github.com/en/packages/working-with-a-github-packages-registry/working-with-the-container-registry#adding-a-description-to-multi-arch-images
           # https://github.com/docker/metadata-action#annotations
           DOCKER_METADATA_ANNOTATIONS_LEVELS: manifest,index
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
         # if: ${{ secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }} # does not work: Unrecognized named-value: 'secrets' - https://www.cloudtruth.com/blog/skipping-jobs-in-github-actions-when-secrets-are-unavailable-securely-inject-configuration-secrets-into-github
         if: github.event_name != 'pull_request' # don't try to login since PRs don't have access to secrets and need to set them in their fork
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }} # actor is user that opened PR, was repository_owner before
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v6
         if: ${{ env.IMAGE_TAG != '' }}
         with:
