megalinter customize config; local run ~7min...
```console
$ npx mega-linter-runner -r v8 -f cupcake
+----SUMMARY----+--------------------------+---------------+-------+-------+--------+----------+--------------+
| Descriptor    | Linter                   | Mode          | Files | Fixed | Errors | Warnings | Elapsed time |
+---------------+--------------------------+---------------+-------+-------+--------+----------+--------------+
| ✅ ACTION     | actionlint               | list_of_files |     4 |       |      0 |        0 | 3.25s        |
| ✅ BASH       | bash-exec                | file          |     1 |       |      0 |        0 | 2.77s        |
| ✅ BASH       | shellcheck               | list_of_files |     1 |       |      0 |        0 | 1.16s        |
| ✅ BASH       | shfmt                    | list_of_files |     1 |     0 |      0 |        0 | 0.6s         |
| ⚠️ COPYPASTE  | jscpd                    | project       |   n/a |       |      8 |        0 | 24.82s       |
| ⚠️ DOCKERFILE | hadolint                 | list_of_files |     1 |       |      4 |        0 | 6.74s        |
| ⚠️ JAVASCRIPT | eslint                   | list_of_files |    15 |     0 |      1 |        0 | 11.04s       |
| ✅ JSON       | jsonlint                 | list_of_files |     7 |       |      0 |        0 | 4.76s        |
| ✅ JSON       | npm-package-json-lint    | project       |   n/a |       |      0 |        0 | 3.26s        |
| ✅ JSON       | prettier                 | list_of_files |     7 |     0 |      0 |        0 | 5.08s        |
| ✅ JSON       | v8r                      | list_of_files |     7 |       |      0 |        0 | 47.96s       |
| ✅ MARKDOWN   | markdownlint             | list_of_files |     2 |     0 |      0 |        0 | 12.16s       |
| ✅ MARKDOWN   | markdown-table-formatter | list_of_files |     2 |     0 |      0 |        0 | 4.15s        |
| ⚠️ REPOSITORY | checkov                  | project       |   n/a |       |      3 |        0 | 112.11s      |
| ✅ R

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,7 +8,7 @@ on:
       - "**"
       - "!*.md"
       # - '!.github/**'
-  pull_request: # runs when opened/reopned or when the head branch is updated
+  pull_request: # runs when opened/reopened or when the head branch is updated
 
 permissions:
   contents: read
