--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "checkJs": true,
     "target": "es2021",
     "module": "NodeNext",
-    "moduleResolution": "NodeNext", // https://github.com/typicode/lowdb/issues/554
+    "moduleResolution": "NodeNext" // https://github.com/typicode/lowdb/issues/554
   },
   "exclude": ["node_modules", "**/node_modules"]
 }
