--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "enabled": false,
-  "extends": [
-    "config:recommended"
-  ]
+  "extends": ["config:recommended"]
 }
