megalinter: upload-sarif category

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -204,3 +204,4 @@ jobs:
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: "megalinter-reports/megalinter-report.sarif"
+          category: mega-linter
