megalinter apparently can't push commit fixing workflows without a sep. PAT
See https://github.com/orgs/community/discussions/26711

--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -49,6 +49,7 @@ jobs:
       issues: write
       pull-requests: write
       security-events: write # needed for SARIF upload
+      actions: write # needed to commit fixes for workflows?
 
     steps:
       # Git Checkout
